# coral_edgetpu_video_inference

./: CMakeLists.txt  README.md
include/classification_engine/: classification_engine.h
include/common_engine/: engine.h
include/detection_engine/: detection_engine.h
include/humanpose_engine/: humanpose_engine.h
include/image_preprocessing/: img_prep.h
include/utils/: label_utils.h
scripts/: cv.patch
scripts/classification/: classify_cpu.sh  classify_edgetpu.sh
scripts/detection/: detect_cpu.sh  detect_edgetpu.sh
scripts/pose_estimation/: pose_cpu_353x481.sh  pose_edgetpu_353x481.sh  pose_edgetpu_480x640.sh  pose_edgetpu_720x1280.sh
src/: classification_camera.cc  detection_camera.cc  humanpose_camera.cc
src/classification_engine/: classification_engine.cc
src/common_engine/: engine.cc
src/detection_engine/: detection_engine.cc
src/humanpose_engine/: humanpose_engine.cc  posenet_decoder.cc  posenet_decoder_op.cc
src/image_preprocessing/: img_prep.cc
src/utils/: label_utils.cc
